fix text- underline on mobile

--- a/style.css
+++ b/style.css
@@ -51,7 +51,8 @@ a{
 }
 a:hover{
     /* text-decoration:underline; */
-    text-decoration-color: rgb(221, 6, 6);
+    /* text-decoration-color: rgb(221, 6, 6); */
+    text-decoration:none;
     border-color:rgba(194, 0, 0, 0.849);
 }
 
